--- a/RaspPi3.MqttBrokerHostVisual/View/MainPage.xaml
+++ b/RaspPi3.MqttBrokerHostVisual/View/MainPage.xaml
@@ -8,10 +8,11 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ListView x:Name="listViewBrokerHost" HorizontalAlignment="Left" Height="620" Margin="10,10,0,0" VerticalAlignment="Top" Width="340" Header="MQTT Broker Control">
-            <ListViewItem>
-                <ToggleSwitch x:Name="toggleSwitchBrokerHost" Header="Is Hosting" IsOn="{Binding Path=IsHosting, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            </ListViewItem>
-        </ListView>
+        <StackPanel Margin="5,5,5,5">
+            <TextBlock x:Name="textBoxHeader" Margin="0,0,0,5" FontWeight="Bold" FontSize="20" Text="MQTT Broker Settings"/>
+            
+            <ToggleSwitch x:Name="toggleSwitchBrokerHost" Header="Is Hosting" 
+                          IsOn="{Binding Path=IsHosting, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        </StackPanel>
     </Grid>
 </Page>
