--- a/RaspPi3.MqttBrokerHostVisual/View/MainPage.xaml
+++ b/RaspPi3.MqttBrokerHostVisual/View/MainPage.xaml
@@ -9,7 +9,7 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Margin="5,5,5,5">
-            <TextBlock x:Name="textBoxHeader" Margin="0,0,0,5" FontWeight="Bold" FontSize="20" Text="MQTT Broker Settings"/>
+            <TextBlock x:Name="textBlockHeader" Margin="0,0,0,5" FontWeight="Bold" FontSize="20" Text="MQTT Broker Settings"/>
             
             <ToggleSwitch x:Name="toggleSwitchBrokerHost" Header="Is Hosting" 
                           IsOn="{Binding Path=IsHosting, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
