--- a/RaspPi3.MqttBrokerPiConsumer/View/MainPage.xaml
+++ b/RaspPi3.MqttBrokerPiConsumer/View/MainPage.xaml
@@ -10,36 +10,36 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Margin="5,5,5,5">
             <TextBlock x:Name="textBoxHeader" Margin="5" FontWeight="Bold" FontSize="20" Text="MQTT Broker Settings"/>
-            
-            <ToggleSwitch x:Name="toggleSwitchBrokerCOnnection" Margin="3" Header="Is Connected" 
+
+            <ToggleSwitch x:Name="toggleSwitchBrokerCOnnection" Margin="3" Header="Is Connected"
                           IsOn="{Binding Path=IsConnected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            
-            <TextBox x:Name="textBloxBrokerName" Margin="3" Header="Broker Name" 
-                     Text="{Binding Path=BrokerName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+
+            <TextBox x:Name="textBloxBrokerName" Margin="3" Header="Broker Name"
+                     Text="{Binding Path=BrokerName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      IsReadOnly="{Binding Path=IsReadOnly, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
-            
-            <TextBox x:Name="textBloxBrokerPort" Margin="3" Header="Broker Port" 
+
+            <TextBox x:Name="textBloxBrokerPort" Margin="3" Header="Broker Port"
                      Text="{Binding Path=BrokerPort, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      IsReadOnly="{Binding Path=IsReadOnly, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
-            
-            <TextBlock x:Name="textBlockError" Margin="3" Foreground="Red" Text="ERROR"                       
-                       Visibility="{Binding Path=IsVisible, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <TextBlock x:Name="textBlockError" Margin="3" Foreground="Red" Text="ERROR"
+                       Visibility="{Binding Path=IsErrorMessageVisible, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
             <TextBlock x:Name="textBlockErrorMessage" Margin="3" Foreground="Red" TextWrapping="Wrap"
-                       Text="{Binding Path=ErrorMessage, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"                       
-                       Visibility="{Binding Path=IsVisible, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
+                       Text="{Binding Path=ErrorMessage, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                       Visibility="{Binding Path=IsErrorMessageVisible, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <TextBlock x:Name="textBlockMessage" Margin="5" FontWeight="Bold" FontSize="20" Text="Message Overview"/>
 
             <TextBlock x:Name="textBlockLastSent" Margin="3" FontWeight="Bold" Text="Latest Sent"/>
-            <TextBox x:Name="textBoxLatestsentTopic" Margin="3" Header="Topic" 
+            <TextBox x:Name="textBoxLatestsentTopic" Margin="3" Header="Topic"
                      Text="{Binding Path=LatestPublishedTopic, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            <TextBox x:Name="textBoxLatestsentMessage" Margin="3" Header="Message" 
+            <TextBox x:Name="textBoxLatestsentMessage" Margin="3" Header="Message"
                      Text="{Binding Path=LatestPublishedMessage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <TextBlock x:Name="textBlockLastReceived" Margin="3" FontWeight="Bold" Text="Latest Received"/>
-            <TextBox x:Name="textBoxLatestReceivedTopic" Margin="3" Header="Topic" 
+            <TextBox x:Name="textBoxLatestReceivedTopic" Margin="3" Header="Topic"
                      Text="{Binding Path=LatestReceivedTopic, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            <TextBox x:Name="textBoxLatestReceivedMessage" Margin="3" Header="Message" 
+            <TextBox x:Name="textBoxLatestReceivedMessage" Margin="3" Header="Message"
                      Text="{Binding Path=LatestReceivedMessage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
     </Grid>
