AzureDB added. Updated NuGets.

--- a/RaspPi3.WebApi/Views/Shared/_Layout.cshtml
+++ b/RaspPi3.WebApi/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - RaspBerryPi API</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/css")
@@ -30,7 +30,7 @@
                 <a class="navbar-brand" href="https://www.ti8m.ch/landing-page">
                     <img src="/Content/ti8m-logo-white.svg" alt="ti&m AG" />
                 </a>
-                @Html.ActionLink("Rasbpi Web API", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("RaspPi Web API", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
