--- a/RaspPi3.WebApi/Views/Home/_Home.cshtml
+++ b/RaspPi3.WebApi/Views/Home/_Home.cshtml
@@ -1,29 +1,26 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
+    <h1>RaspberryPi API developed with ASP.NET Web apps.</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 <div class="row">
     <div class="col-md-4">
-        <h2>Your information</h2>
-        <p>This section shows how you can call ASP.NET Web API to get the user details.</p>
-        <p data-bind="text: myHometown"></p>
-
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=273732">Learn more &raquo;</a></p>
+        <h2>Windows IoT</h2>
+        <p>This project is part of a Windows IoT project. Ther is the Windows IoT Core Preview operating system used and running on a Raspberry Pi 3</p>
+        <p><a class="btn btn-default" href="https://developer.microsoft.com/de-de/windows/iot">Learn more &raquo;</a></p>
     </div>
 
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>MQTT Broker</h2>
         <p>
-            ASP.NET Single Page Application (SPA) helps you build applications that include significant client-side interactions using HTML, CSS, and JavaScript.
-            It's now easier than ever before to getting started writing highly interactive web applications.
+            The leading protocoll used on the Pi to exchange messages with other devices is the MQTT Protocoll. Therefore the CloudMQTT Broker is used.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=273732">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://www.cloudmqtt.com/">Learn more &raquo;</a></p>
     </div>
 
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Azure Hosting</h2>
+        <p>You can easily host the web apps in Azure. It brings a lot of benefits with it such as Application Insights.</p>
+        <p><a class="btn btn-default" href="https://azure.microsoft.com/de-de/services/app-service/web/">Learn more &raquo;</a></p>
     </div>
 </div>
