--- a/RaspPi3.WebApi/Content/CustomBootstrap.css
+++ b/RaspPi3.WebApi/Content/CustomBootstrap.css
@@ -1,88 +1,28 @@
 ﻿
-.nav > li > a:hover,
-.nav > li > a:focus {
-  text-decoration: none;
-  background-color: #eeeeee;
+.navbar-header:before,
+.navbar-header:after {
+  display: table;
+  content: " ";
 }
 
-.nav > li.disabled > a {
-  color: #999999;
+.navbar-header:after {
+  clear: both;
 }
 
-.nav > li.disabled > a:hover,
-.nav > li.disabled > a:focus {
-  color: #999999;
-  text-decoration: none;
-  cursor: not-allowed;
-  background-color: transparent;
+.navbar-header:before,
+.navbar-header:after {
+  display: table;
+  content: " ";
 }
 
-.nav .open > a,
-.nav .open > a:hover,
-.nav .open > a:focus {
-  background-color: #eeeeee;
-  border-color: #428bca;
+.navbar-header:after {
+  clear: both;
 }
 
-.nav .nav-divider {
-  height: 1px;
-  margin: 9px 0;
-  overflow: hidden;
-  background-color: #e5e5e5;
-}
-
-.nav-tabs {
-  border-bottom: 1px solid #dddddd;
-}
-
-
-.nav-tabs > li > a:hover {
-  border-color: #eeeeee #eeeeee #dddddd;
-}
-
-.nav-tabs > li.active > a,
-.nav-tabs > li.active > a:hover,
-.nav-tabs > li.active > a:focus {
-  color: #555555;
-  cursor: default;
-  background-color: #ffffff;
-  border: 1px solid #dddddd;
-  border-bottom-color: transparent;
-}
-
-.nav-tabs.nav-justified > li > a {
-  margin-right: 0;
-  border-bottom: 1px solid #dddddd;
-}
-
-.nav-tabs.nav-justified > .active > a {
-  border-bottom-color: #ffffff;
-}
-
-.nav-pills > li.active > a,
-.nav-pills > li.active > a:hover,
-.nav-pills > li.active > a:focus {
-  color: #ffffff;
-  background-color: #428bca;
-}
-
-.nav-tabs-justified > .active > a {
-  border-bottom-color: #ffffff;
-}
-
-.nav a:hover .caret {
-  border-top-color: #2a6496;
-  border-bottom-color: #2a6496;
-}
-
-.navbar-collapse {
-  max-height: 340px;
-  padding-right: 15px;
-  padding-left: 15px;
-  overflow-x: visible;
-  border-top: 1px solid transparent;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-  -webkit-overflow-scrolling: touch;
+@media (min-width: 768px) {
+  .navbar-header {
+    float: left;
+  }
 }
 
 .container > .navbar-header,
@@ -90,33 +30,30 @@
   margin-right: -15px;
   margin-left: -15px;
 }
+
+@media (min-width: 768px) {
+  .container > .navbar-header,
+  .container > .navbar-collapse {
+    margin-right: 0;
+    margin-left: 0;
+  }
+}
+
 .navbar-brand {
   float: left;
   padding: 15px 15px;
   font-size: 18px;
-  line-height: 70px;
+  line-height: 20px;
 }
 
 .navbar-brand>img{
-    height: 70px;
-    width: 70px;
+    height: auto;
+    width: 50px;
 }
 
 .navbar-brand:hover,
 .navbar-brand:focus {
   text-decoration: none;
-}
-
-.navbar-toggle {
-  position: relative;
-  float: right;
-  padding: 9px 10px;
-  margin-top: 8px;
-  margin-right: 15px;
-  margin-bottom: 8px;
-  background-color: transparent;
-  border: 1px solid transparent;
-  border-radius: 4px;
 }
 
 .navbar-toggle .icon-bar {
@@ -131,7 +68,7 @@
 }
 
 .navbar-nav > li > a {
-  line-height: 70px;
+  line-height: 5px;
 }
 
 .navbar-default {
@@ -304,19 +241,4 @@
 .navbar-inverse .navbar-nav > .dropdown > a .caret {
   border-top-color: #999999;
   border-bottom-color: #999999;
-}
-
-.navbar-inverse .navbar-nav > .open > a .caret,
-.navbar-inverse .navbar-nav > .open > a:hover .caret,
-.navbar-inverse .navbar-nav > .open > a:focus .caret {
-  border-top-color: #ffffff;
-  border-bottom-color: #ffffff;
-}
-
-.navbar-inverse .navbar-link {
-  color: #999999;
-}
-
-.navbar-inverse .navbar-link:hover {
-  color: #ffffff;
 }
