new controller. new mqttmessage format.

--- a/RaspPi3.WebApi/Views/Account/ConfirmMailSend.cshtml
+++ b/RaspPi3.WebApi/Views/Account/ConfirmMailSend.cshtml
@@ -5,7 +5,7 @@
 <h2>@ViewBag.Title.</h2>
 <div>
     <p>
-       Thank you for your registration. And email has been sent to your address. Please click the confirmation link.
+       Thank you for your registration. An email has been sent to your address. Please click the confirmation link.
     </p>
 </div>
 
