--- a/RaspPi3.WebApi/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/RaspPi3.WebApi/Areas/HelpPage/Views/Help/Index.cshtml
@@ -6,7 +6,7 @@
 @model Collection<ApiDescription>
 
 @{
-    ViewBag.Title = "ASP.NET Web API Help Page";
+    ViewBag.Title = "Raspberry Pi API Information Page";
 
     // Group APIs by controller
     ILookup<HttpControllerDescriptor, ApiDescription> apiGroups = Model.ToLookup(api => api.ActionDescriptor.ControllerDescriptor);
@@ -25,7 +25,7 @@
         <div class="content-wrapper">
             <h2>Introduction</h2>
             <p>
-                Provide a general description of your APIs here.
+                This page show the general APIs available to youse within your Raspberry Pi project. You can either consume the services on the Pi or from any other device.
             </p>
         </div>
     </section>
